--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ pillow
 sorl-thumbnail
 django==2.2.6
 djangorestframework
-djangorestframework-simplejwt==4.7.1
-djoser==2.1.0
+# djangorestframework-simplejwt==4.7.1
+# djoser==2.1.0
